deploy/k8s/overlays/prod/patch-ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abzora-admin-ingress
spec:
  tls:
    - hosts:
        - admin.abzora.com
      secretName: prod-abzora-admin-tls
  rules:
    - host: admin.abzora.com
