deploy/k8s/overlays/prod/patch-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abianzo-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "4"
spec:
  tls:
    - hosts:
        - api.abianzo.com
      secretName: prod-abianzo-api-tls
  rules:
    - host: api.abianzo.com
