deploy/k8s/overlays/prod/patch-ingress-websocket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abzora-websocket-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-connections: "500"
spec:
  tls:
    - hosts:
        - ws.abzora.com
      secretName: prod-abzora-ws-tls
  rules:
    - host: ws.abzora.com
